home changed with boots

--- a/assets/css/bootsnav.css
+++ b/assets/css/bootsnav.css
@@ -302,7 +302,7 @@ nav.bootsnav.nav-box .dropdown-menu {
 
   .navbar-right {
     float: right !important;
-    /* margin-right: -15px; */
+    margin-right: 20px;
   }
 
   .navbar-right ~ .navbar-right {
