--- a/style.css
+++ b/style.css
@@ -420,6 +420,43 @@ input {
   position: relative;
 }
 
+.overlay {
+  position: absolute;
+  bottom: 0;
+  /* background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); Black see-through */
+  background: rgba(0, 0, 0, 0)
+    linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%)
+    repeat scroll 0 0;
+  color: #f1f1f1;
+  width: 100%;
+  height: 50%;
+  transition: 0.5s ease;
+  opacity: 0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.card:hover .overlay {
+  opacity: 1;
+}
+
+.card .card-text {
+  color: #fff;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+a.read-more:hover {
+  color: #009358 !important;
+}
+
 @media (min-width: 576px) {
   .container-medium {
     max-width: 540px;
