--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1486,6 +1486,9 @@
   .attr-nav > ul > li.button {
     display: none;
   }
+  .lanka {
+    width: 250px;
+  }
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
