--- a/style.css
+++ b/style.css
@@ -432,7 +432,7 @@ input {
   width: 100%;
   height: 50%;
   transition: 0.5s ease;
-  opacity: 0;
+  opacity: 1;
   color: white;
   font-size: 20px;
   padding: 20px;
@@ -440,10 +440,10 @@ input {
   display: flex;
   flex-direction: column-reverse;
 }
-
+/* 
 .card:hover .overlay {
   opacity: 1;
-}
+} */
 
 .card .card-text {
   color: #fff;
