--- a/style.css
+++ b/style.css
@@ -254,6 +254,12 @@ strong {
   font-weight: 700;
 }
 
+/* ol{
+  padding-left: 0;
+} */
+
+
+
 p.founder .name {
   font-size: 23px;
   font-weight: 700;
